<resources>
    <string name="app_name">Kuliah Mobile</string>
    <string name="data_1">Data 1</string>
    <string name="data_3">Data 3</string>
    <string name="data_2">Data 2</string>
    <string name="calculate_average">Calculate</string>
    <string name="titik">...</string>
    <string name="reset">Reset</string>
    <string name="send_to_second_activity">Send to Second Activity</string>
    <string name="catatan">Catatan:</string>
    <string name="nilai_median">Nilai Median:</string>
    <string name="nilai_min">Nilai Min:</string>
    <string name="nilai_max">Nilai Max:</string>
    <string name="nilai_mean">Nilai Mean:</string>
    <string name="nama">Nama\t\t\t\t\t\t\t\t\t:</string>
    <string name="nim">NIM\t\t\t\t\t\t\t\t\t\t\t:</string>
    <string name="program_studi">Program Studi\t:</string>
    <string name="email">Email\t\t\t\t\t\t\t\t\t:</string>
    <string name="ini_adalah_fragment_1">Ini adalah Fragment 1</string>
    <string name="kalau_yang_ini_fragment_2">Kalau yang ini Fragment 2</string>
</resources>
